# pradyun-assignment-chatbot

./: .gitignore  Makefile  README.md
client/chat-app/: package-lock.json  package.json
client/chat-app/src/: App.css  App.jsx
client/chat-app/src/components/: ChatInterface.css  ChatInterface.jsx  ModelSelector.css  ModelSelector.jsx
client/chat-app/src/services/: api.js
server/: pyproject.toml
server/src/: __init__.py  main.py
server/src/errors/: __init__.py  exceptions.py
server/src/managers/: __init__.py  anthropic_manager.py  base_manager.py  openai_manager.py
server/src/models/: err_response.py  succ_response.py
